--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+#server.port = 8989
+
+#PostgreSql
+#spring.datasource.username=postgres
+#spring.datasource.password=admin
+#spring.datasource.url=jdbc:postgresql://localhost:5432/postgres?axwebproject
 
